prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elderping-prod
  labels:
    app.kubernetes.io/name: elderping-prod
    app.kubernetes.io/managed-by: kubectl
